--- a/text/ch3-orion.tex
+++ b/text/ch3-orion.tex
@@ -3,9 +3,9 @@
 \minitoc
 
 \section{Introduction}
-The simulations of Chapter \ref{ch:2-zvp} are a relatively efficient and cost-effective means of study. High-power laser experiments are a cumbersome technical challenge. However, the proliferation of errors in simulation codes inevitably generates significant deviation from reality, while reality itself diverges from the idealistic conditions modelled by the codes. For now, at least, experimentation remains an essential component of the scientific method. Expectations must also be scaled back to reality. This chapter reports on the March 2023 experiment on the ORION laser facility, AWE, Aldermaston, the UK's most powerful laser system. And yet, it cannot access the ZVP parameter space at these intensities and pulse durations: the $S$ parameter is too large and the preplasma scale length too steep. Instead, this chapter will focus on the ROM model of HHG. This model describes the properties of radiation reflected from a relativistic laser pulse interaction with a solid-density plasma, another related route to bright attosecond light sources. 
+The simulations of Chapter \ref{ch:2-zvp} are a relatively efficient and cost-effective means of study. In comparison high-power laser experiments are a cumbersome technical challenge. However, the proliferation of errors in simulation codes will inevitably cause deviation from reality, while reality itself diverges from the idealised conditions of the codes. For now, at least, experiments remain an essential component of the scientific method. This chapter reports on the March 2023 experiment at the ORION laser facility, AWE, Aldermaston, the UK's most powerful laser system. The pulse duration is too long to create the attosecond electron bunches of the previous chapter. Instead, this chapter will focus on the ROM model of HHG. This model describes the properties of radiation reflected from a relativistic laser pulse interaction with a solid-density plasma, another related route to bright attosecond light sources. 
 
-A fundamentally different mechanism to its Nobel prize-winning counterpart, SHHG from solids has demonstrated significantly higher conversion efficiencies and, relying on plasma oscillations not ionisation, does not suffer from the same limits to applied intensity \cite{teubnerHighorderHarmonicsLaserirradiated2009}. SHHG has thus become a field of considerable interest for the production of bright coherent attosecond harmonics. It was first observed from the interaction of a CO$_2$ laser-solid interaction in 1981 \cite{carmanVisibleHarmonicEmission1981}, followed shortly by the theoretical justification \cite{bezzeridesPlasmaMechanismUltraviolet1982}. Interest in HHG was revived by the arrival of CPA technology enabling access to unprecedented laser pulse intensities and ever higher harmonic orders. To describe this relativistic interaction, 1994 saw the arrival of a new theory, the \ac{OMM} \cite{bulanovInteractionUltrashortRelativistically1994}. In this regime, harmonics were seen to be formed by the Doppler effect induced by a thin reflecting charge sheet at the plasma surface oscillating periodically with the laser pulse. This theory predicts a cutoff harmonic number of $n_\mathrm{c} = 4\gamma_\mathrm{s}^2 $, where $\gamma_\mathrm{s}$ is the maximum gamma factor of the charge sheet. This relatively low cutoff is at odds with experimental results, the current record standing at the 3200\th harmonic observed on the Vulcan PW laser system in 2007 \cite{dromeyBrightMultikeVHarmonic2007}. It was only after the development of relativistic similarity theory \cite{gordienkoScalingsUltrarelativisticLaser2005}, which laid the groundwork for Baeva's ROM model, that the experimentally observed cut-off could now be explained \cite{baevaTheoryHighorderHarmonic2006}. Since ORION and Vulcan parameter spaces are similar, this is the most appropriate description of SHHG and is described in more detail in Section \ref{ch:3-sec:theory}.
+A fundamentally different mechanism to its Nobel prize-winning counterpart, SHHG from solids has demonstrated significantly higher conversion efficiencies and, relying on plasma oscillations not ionisation, does not suffer from the same limits to applied intensity \cite{teubnerHighorderHarmonicsLaserirradiated2009}. SHHG has thus become a field of considerable interest for the production of bright coherent attosecond harmonics. It was first observed from the interaction of a CO$_2$ laser-solid interaction in 1981 \cite{carmanVisibleHarmonicEmission1981}, followed shortly by a theoretical justification \cite{bezzeridesPlasmaMechanismUltraviolet1982}. Interest in HHG was revived by the arrival of CPA technology enabling access to unprecedented laser pulse intensities and ever higher harmonic orders. To describe this relativistic interaction, 1994 saw the arrival of a new theory, the \ac{OMM} \cite{bulanovInteractionUltrashortRelativistically1994}. Harmonics were seen to be formed by the Doppler effect induced by a thin reflecting charge sheet at the plasma surface oscillating periodically with the laser pulse. This theory predicts a cutoff harmonic number of $n_\mathrm{c} = 4\gamma_\mathrm{s}^2 $, where $\gamma_\mathrm{s}$ is the maximum gamma factor of the charge sheet. This relatively low cutoff is at odds with experimental results, the current record standing at the 3200\th harmonic observed on the Vulcan PW laser system in 2007 \cite{dromeyBrightMultikeVHarmonic2007}. It was only after the development of relativistic similarity theory \cite{gordienkoScalingsUltrarelativisticLaser2005}, which laid the groundwork for Baeva's ROM model, that the experimentally observed cut-off could now be explained \cite{baevaTheoryHighorderHarmonic2006}. Since ORION and Vulcan parameter spaces are similar, this is the most appropriate description of SHHG and is described in more detail in Section \ref{ch:3-sec:theory}.
 
 There are many fascinating applications for SHHG beyond that of attosecond physics. The high photon energy content of the harmonic beam has excellent penetration into dense materials with preliminary studies indicating notable improvement in energy absorption, suitable for auxiliary heating of ICF targets \cite{paddockEnergyGainWettedfoam2024}. This high energy content also enables the focusing of the harmonic beam to significantly smaller spot sizes than the incident diffraction-limited laser pulse. An all-optical coherent focusing of high harmonics with realistic laser parameters has been shown to produce over 1000 times intensity gain \cite{vincentiAchievingExtremeLight2019}, thus providing a realistic route to the Schwinger limit \cite{quereReflectingPetawattLasers2021}, improving the odds of observation of photon-photon scattering \cite{aboushelbayaOrbitalAngularMomentum2019} or of gravitational waves from twisted light \cite{atongaGravitationalWavesHighpower2023}. Simulations have shown how a harmonic beam can probe \ac{SF-QED} if a solid target is placed at the new focal position \cite{fedeliProbingStrongfieldQED2020}.
 
@@ -256,6 +256,14 @@ this determines the new peak intensity yielded by hole boring.
 \subsection{Harmonic source size}
 % TODO come back to this section.......
 Include plots and fits for near roll-off.
+There is some harmonic source size shrinkage inherent to the interaction. Perhaps surprisingly, at photon energies below the harmonic cut-off, Vincenti \textit{et al} demonstrated a weak dependence on harmonic order \cite{vincentiOpticalPropertiesRelativistic2014}, finding $w_n \approx 0.5 w_\mathrm{L}$ from their 1D PIC simulation parameter scan. Approaching the cut-off the harmonic source size shrinkage will be enhanced by the roll-off. While it is unfeasible to perform a similar parameter scan to confirm this dependence, at least the magnification factor is only weakly dependent on $w_n$ and hence this uncertainty does not pose a huge issue for calculation of the signal at OHREX nor for the calculation of the peak intensity at the new focus since the wings of the spectrum do not contribute.
+
+Incidentally, source size shrinkage reduces the error on the parabolic mirror approximation. The fractional error between the approximation and the true surface as a function of the distance from the centre of the mirror is
+\begin{equation}
+	\mathrm{err} = e^{y^2/w^2_\mathrm{L}}\left(1-\frac{y^2}{w^2_\mathrm{L}}\right)-1.
+\end{equation}
+At $y=0.5 w_\mathrm{L}$ is 4\%, compared to 104\% at $y= w_\mathrm{L}$. This suggests minimal leakage of X-ray harmonics around the main beam.
+% TODO what is the size for roll off? get up the calculations on archer
 
 \subsection{The SHHG optimal parameter space}
 Interest in SHHG has prompted many numerical and experimental studies for the determination of its optimal parameters. The interaction efficiency increases with laser pulse intensity \cite{pukhovRelativisticHighHarmonics2009, edwardsXRayEmissionEffectiveness2020} with a relativistic similarity parameter close to unity being preferable \cite{edwardsXRayEmissionEffectiveness2020, gonoskovUltrarelativisticNanoplasmonicsRoute2011}. The effective similarity parameter can be reduced with a finite preplasma scale length. The transverse coherence of the incident beam should be as good as possible to mitigate phase errors, this is best achieved with a diffraction-limited beam \cite{dromeyHighHarmonicGeneration2006}. While HHG in transmission from thin foils is the optimum for currently accessible laser pulse intensities, HHG in reflection is more efficient for next-generation systems \cite{edwardsElectronNanobunchWidthDominatedSpectralPower2020}. 
