--- a/text/ch4-gemini.tex
+++ b/text/ch4-gemini.tex
@@ -149,7 +149,7 @@ At some point, the signal will overshoot and enter the CWE regime, preferably ea
 
 Kahaly \textit{et al} show a linear relationship between main pulse delay relative to prepulse and scale length (due to more time for the preplasma to expand) but also note that for the same scale length, a larger delay (accompanied by smaller energy in the prepulse) produces higher quality harmonics. This could be understood as a natural consequence of the lower plasma temperatures, which improve the ability of the system to perform coherent SHHG behaviour. If harmonics are accessed using the Kahaly method, the signal can be improved our signal by moving the prepulse mirror further from the main pulse mirror while also reducing the fraction of overlap between the two mirrors to reduce the energy in the prepulse. The Kahaly mirror should be placed before the final mirror before the parabola. The further back in the chain it is placed, diffraction from the mount can cause greater danger to the optical system. The linear relationship between main pulse delay and scale length coupled with the XUV HHG signal measurements can be applied to discrete changes to the system to quantify contrast improvements.
 
-\section{Beyond GEMINI PW}\label{sec:ch4-beyond}
+\section{Beyond GEMINI PW and future work}\label{sec:ch4-beyond}
 % TODO chapter summary
 This experiment will hopefully be only the start. Contrast measurements will certainly be interesting and influential if cracked.
 
@@ -161,10 +161,34 @@ The return of HHG study to CLF after more than a decade hiatus is certainly indi
 
 Perhaps in the summary of work of the thesis (new chapter), note that some of the actions laid out by Savin in his future work have been achieved, ie, experiment to measure ZVP electron bunches and theoretical model for the scaling of absorption efficiency with S
 
+
+Other future work: 
+Return to the QED ZVP theory to understand the rapid rise in BW energy and to explore the transition to QED and look further for the tranistion to SF-QED.
+Electron bunches XUV CTR
+Parameter scan of bunch energies to confirm ZVP scaling
+Combine X-ray measurement on GEMINI with some of the single attosecond pulse ideas eg polarisation gating to generate an isolated X-ray pulse 
+Explroe heating with an HHG beam in experiment
+Take GEMINI experiment to Vulcan and beyond
+Explore options for guiding of ZVP attosecond electron bunches.
+GPU 1D simulations of X-ray HHG
+
+% TODO CHECK IN THE TARGETS LIST THERE IS ALSO SIMPLE SILICON WAFER UNSTRUCTURED TARGETS
+
+Summary:
+Since savin where we at? His suggestions were
+- Campaign to observe ZVP underway
+- An analytical model for the observed inverse scaling of absorption with similarity theory has been developed.
+- And the relation of this model to HHG has been discussed
+- An extensive QED parameter scan was initiated, however, this identified further points that needed addressing, now we have understanding of the transition point to QED
+- TODO: PIC simulation of HHG beam interacting with matter
+
+Aside from this, electron bunches have been directly related to the scaling equations, not just overall energy absorption, attosecond bunch mechanism under ZVP framework has been discussed, X-ray harmonics generated and measured and GEMINI experiment planned.
+
+
 %TODO add a comment about the use of HHG as a heating source, highly efficient highly penetrating
 % TODO hyades (hmm no maybe PIC? but then cant do heating effect.. can use heaths code for tempeerature in smilei) sim of ORION hhg beam entering a plasma and heating vs ORION laser.
 
-GPU 1D simulations of X-ray HHG
+
 
 % TODO add optimal HHG conditions somewhere
 
