--- a/Oxford_Thesis.tex
+++ b/Oxford_Thesis.tex
@@ -207,7 +207,7 @@
 \include{text/ch2-zvp}
 \include{text/ch3-orion}
 \include{text/ch4-gemini}
-\include{text/chx-misc}
+%\include{text/chx-misc}
 
 % TODO Add publications and contributions
 
